objects/Account.object
<CustomObject>
    <fields>
        <fullName>OwnerTarget_ERP__c</fullName>
        <formula>TEXT(Owner.ERP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerTarget ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRD_Flag_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R-0599</description>
        <label>PRD Flag For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentChangeDateSoldTo__c</fullName>
        <label>ParentChangeDateSoldTo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentChangedDateL1__c</fullName>
        <label>ParentChangedDateL1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentChangedDateL2__c</fullName>
        <label>ParentChangedDateL2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentChangedDateL3__c</fullName>
        <label>ParentChangedDateL3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be checked/unchecked via workflow based on Old Parent value.</description>
        <label>ParentCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type__c</fullName>
        <formula>Parent.SAP_Best_Account_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Salesforce_Cust_ID__c</fullName>
        <formula>Parent.Salesforce_customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Salesforce Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Team_Email_to_receive_the_request__c</fullName>
        <description>R1_R-0611_Email field</description>
        <label>Person/Team Email to receive the request</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <description>Created For Account Team Member Trigger</description>
        <label>Previous Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordtypeCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be checked/unchecked via workflow based on Old Recordtype value.</description>
        <label>RecordtypeCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_1__c</fullName>
        <description>R1_R-0599</description>
        <formula>CASE( BillingCountry ,&apos;Andorra&apos;,&apos;EMEA&apos;, 
&apos;United Arab Emirates&apos;,&apos;EMEA&apos;, 
&apos;Anguilla&apos;,&apos;EMEA&apos;, 
&apos;Albania&apos;,&apos;EMEA&apos;, 
&apos;Armenia&apos;,&apos;EMEA&apos;, 
&apos;Angola&apos;,&apos;EMEA&apos;, 
&apos;Austria&apos;,&apos;EMEA&apos;, 
&apos;Aruba&apos;,&apos;EMEA&apos;, 
&apos;Aland Islands&apos;,&apos;EMEA&apos;, 
&apos;Azerbaijan&apos;,&apos;EMEA&apos;, 
&apos;Bosnia and Herzegovina&apos;,&apos;EMEA&apos;, 
&apos;Belgium&apos;,&apos;EMEA&apos;, 
&apos;Burkina Faso&apos;,&apos;EMEA&apos;, 
&apos;Bulgaria&apos;,&apos;EMEA&apos;, 
&apos;Bahrain&apos;,&apos;EMEA&apos;, 
&apos;Burundi&apos;,&apos;EMEA&apos;, 
&apos;Benin&apos;,&apos;EMEA&apos;, 
&apos;Saint Barthélemy&apos;,&apos;EMEA&apos;, 
&apos;Bermuda&apos;,&apos;EMEA&apos;, 
&apos;Bonaire, Sint Eustatius and Saba&apos;,&apos;EMEA&apos;, 
&apos;Bouvet Island&apos;,&apos;EMEA&apos;, 
&apos;Botswana&apos;,&apos;EMEA&apos;, 
&apos;Belarus&apos;,&apos;EMEA&apos;, 
&apos;Congo, the Democratic Republic of the&apos;,&apos;EMEA&apos;, 
&apos;Central African Republic&apos;,&apos;EMEA&apos;, 
&apos;Congo&apos;,&apos;EMEA&apos;, 
&apos;Switzerland&apos;,&apos;EMEA&apos;, 
&apos;Côte dIvoire&apos;,&apos;EMEA&apos;, 
&apos;Cameroon&apos;,&apos;EMEA&apos;, 
&apos;Cape Verde&apos;,&apos;EMEA&apos;, 
&apos;Curaçao&apos;,&apos;EMEA&apos;, 
&apos;Cyprus&apos;,&apos;EMEA&apos;, 
&apos;Czech Republic&apos;,&apos;EMEA&apos;, 
&apos;Germany&apos;,&apos;EMEA&apos;, 
&apos;Djibouti&apos;,&apos;EMEA&apos;, 
&apos;Denmark&apos;,&apos;EMEA&apos;, 
&apos;Algeria&apos;,&apos;EMEA&apos;, 
&apos;Estonia&apos;,&apos;EMEA&apos;, 
&apos;Egypt&apos;,&apos;EMEA&apos;, 
&apos;Western Sahara&apos;,&apos;EMEA&apos;, 
&apos;Eritrea&apos;,&apos;EMEA&apos;, 
&apos;Spain&apos;,&apos;EMEA&apos;, 
&apos;Ethiopia&apos;,&apos;EMEA&apos;, 
&apos;Finland&apos;,&apos;EMEA&apos;, 
&apos;Falkland Islands (Malvinas)&apos;,&apos;EMEA&apos;, 
&apos;Faroe Islands&apos;,&apos;EMEA&apos;, 
&apos;France&apos;,&apos;EMEA&apos;, 
&apos;Gabon&apos;,&apos;EMEA&apos;, 
&apos;United Kingdom&apos;,&apos;EMEA&apos;, 
&apos;Georgia&apos;,&apos;EMEA&apos;, 
&apos;French Guiana&apos;,&apos;EMEA&apos;, 
&apos;Guernsey&apos;,&apos;EMEA&apos;, 
&apos;Ghana&apos;,&apos;EMEA&apos;, 
&apos;Gibraltar&apos;,&apos;EMEA&apos;, 
&apos;Greenland&apos;,&apos;EMEA&apos;, 
&apos;Gambia&apos;,&apos;EMEA&apos;, 

&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <description>R1_R-0599</description>
        <formula>CASE( BillingCountry ,&apos;Guinea&apos;,&apos;EMEA&apos;, 
&apos;Guadeloupe&apos;,&apos;EMEA&apos;, 
&apos;Equatorial Guinea&apos;,&apos;EMEA&apos;, 
&apos;Greece&apos;,&apos;EMEA&apos;, 
&apos;South Georgia and the South Sandwich Islands&apos;,&apos;EMEA&apos;, 
&apos;Guinea-Bissau&apos;,&apos;EMEA&apos;, 
&apos;Croatia&apos;,&apos;EMEA&apos;, 
&apos;Hungary&apos;,&apos;EMEA&apos;, 
&apos;Ireland&apos;,&apos;EMEA&apos;, 
&apos;Israel&apos;,&apos;EMEA&apos;, 
&apos;Isle of Man&apos;,&apos;EMEA&apos;, 
&apos;British Indian Ocean Territory&apos;,&apos;EMEA&apos;, 
&apos;Iraq&apos;,&apos;EMEA&apos;, 
&apos;Iran, Islamic Republic of&apos;,&apos;EMEA&apos;, 
&apos;Iceland&apos;,&apos;EMEA&apos;, 
&apos;Italy&apos;,&apos;EMEA&apos;, 
&apos;Jersey&apos;,&apos;EMEA&apos;, 
&apos;Jordan&apos;,&apos;EMEA&apos;, 
&apos;Kenya&apos;,&apos;EMEA&apos;, 
&apos;Comoros&apos;,&apos;EMEA&apos;, 
&apos;Kuwait&apos;,&apos;EMEA&apos;, 
&apos;Cayman Islands&apos;,&apos;EMEA&apos;, 
&apos;Lebanon&apos;,&apos;EMEA&apos;, 
&apos;Liechtenstein&apos;,&apos;EMEA&apos;, 
&apos;Liberia&apos;,&apos;EMEA&apos;, 
&apos;Lesotho&apos;,&apos;EMEA&apos;, 
&apos;Lithuania&apos;,&apos;EMEA&apos;, 
&apos;Luxembourg&apos;,&apos;EMEA&apos;, 
&apos;Latvia&apos;,&apos;EMEA&apos;, 
&apos;Libya&apos;,&apos;EMEA&apos;, 
&apos;Morocco&apos;,&apos;EMEA&apos;, 
&apos;Monaco&apos;,&apos;EMEA&apos;, 
&apos;Moldova, Republic of&apos;,&apos;EMEA&apos;, 
&apos;Montenegro&apos;,&apos;EMEA&apos;, 
&apos;Saint Martin (French part)&apos;,&apos;EMEA&apos;, 
&apos;Madagascar&apos;,&apos;EMEA&apos;, 
&apos;Macedonia, the former Yugoslav Republic of&apos;,&apos;EMEA&apos;, 
&apos;Mali&apos;,&apos;EMEA&apos;, 
&apos;Martinique&apos;,&apos;EMEA&apos;, 
&apos;Mauritania&apos;,&apos;EMEA&apos;, 
&apos;Montserrat&apos;,&apos;EMEA&apos;, 
&apos;Malta&apos;,&apos;EMEA&apos;, 
&apos;Mauritius&apos;,&apos;EMEA&apos;, 
&apos;Malawi&apos;,&apos;EMEA&apos;, 
&apos;Mozambique&apos;,&apos;EMEA&apos;, 
&apos;Namibia&apos;,&apos;EMEA&apos;, 
&apos;New Caledonia&apos;,&apos;EMEA&apos;, 
&apos;Niger&apos;,&apos;EMEA&apos;, 
&apos;Nigeria&apos;,&apos;EMEA&apos;, 
&apos;Netherlands&apos;,&apos;EMEA&apos;, 
&apos;Norway&apos;,&apos;EMEA&apos;, 
&apos;Oman&apos;,&apos;EMEA&apos;, 
&apos;French Polynesia&apos;,&apos;EMEA&apos;, 
&apos;Poland&apos;,&apos;EMEA&apos;, 
&apos;Saint Pierre and Miquelon&apos;,&apos;EMEA&apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_3__c</fullName>
        <description>R1_R-0599</description>
        <formula>CASE( BillingCountry ,&apos;Pitcairn&apos;,&apos;EMEA&apos;, 
&apos;Palestinian Territory, Occupied&apos;,&apos;EMEA&apos;, 
&apos;Portugal&apos;,&apos;EMEA&apos;, 
&apos;Qatar&apos;,&apos;EMEA&apos;, 
&apos;Reunion&apos;,&apos;EMEA&apos;, 
&apos;Romania&apos;,&apos;EMEA&apos;, 
&apos;Serbia&apos;,&apos;EMEA&apos;, 
&apos;Russian Federation&apos;,&apos;EMEA&apos;, 
&apos;Rwanda&apos;,&apos;EMEA&apos;, 
&apos;Saudi Arabia&apos;,&apos;EMEA&apos;, 
&apos;Seychelles&apos;,&apos;EMEA&apos;, 
&apos;Sudan&apos;,&apos;EMEA&apos;, 
&apos;Sweden&apos;,&apos;EMEA&apos;, 
&apos;Saint Helena, Ascension and Tristan da Cunha&apos;,&apos;EMEA&apos;, 
&apos;Slovenia&apos;,&apos;EMEA&apos;, 
&apos;Svalbard and Jan Mayen&apos;,&apos;EMEA&apos;, 
&apos;Slovakia&apos;,&apos;EMEA&apos;, 
&apos;Sierra Leone&apos;,&apos;EMEA&apos;, 
&apos;San Marino&apos;,&apos;EMEA&apos;, 
&apos;Senegal&apos;,&apos;EMEA&apos;, 
&apos;Somalia&apos;,&apos;EMEA&apos;, 
&apos;South Sudan&apos;,&apos;EMEA&apos;, 
&apos;Sao Tome and Principe&apos;,&apos;EMEA&apos;, 
&apos;Sint Maarten (Dutch part)&apos;,&apos;EMEA&apos;, 
&apos;Syrian Arab Republic&apos;,&apos;EMEA&apos;, 
&apos;Swaziland&apos;,&apos;EMEA&apos;, 
&apos;Turks and Caicos Islands&apos;,&apos;EMEA&apos;, 
&apos;Chad&apos;,&apos;EMEA&apos;, 
&apos;French Southern Territories&apos;,&apos;EMEA&apos;, 
&apos;Togo&apos;,&apos;EMEA&apos;, 
&apos;Tunisia&apos;,&apos;EMEA&apos;, 
&apos;Turkey&apos;,&apos;EMEA&apos;, 
&apos;Tanzania, United Republic of&apos;,&apos;EMEA&apos;, 
&apos;Ukraine&apos;,&apos;EMEA&apos;, 
&apos;Uganda&apos;,&apos;EMEA&apos;, 
&apos;Holy See (Vatican City State)&apos;,&apos;EMEA&apos;, 
&apos;Virgin Islands, British&apos;,&apos;EMEA&apos;, 
&apos;Wallis and Futuna&apos;,&apos;EMEA&apos;, 
&apos;Yemen&apos;,&apos;EMEA&apos;, 
&apos;Mayotte&apos;,&apos;EMEA&apos;, 
&apos;South Africa&apos;,&apos;EMEA&apos;, 
&apos;Zambia&apos;,&apos;EMEA&apos;, 
&apos;Zimbabwe&apos;,&apos;EMEA&apos;, 
&apos;Antigua and Barbuda&apos;,&apos;Americas&apos;, 
&apos;Antarctica&apos;,&apos;Americas&apos;, 
&apos;Argentina&apos;,&apos;Americas&apos;, 
&apos;American Samoa&apos;,&apos;Americas&apos;, 
&apos;Barbados&apos;,&apos;Americas&apos;, 
&apos;Bolivia, Plurinational State of&apos;,&apos;Americas&apos;, 
&apos;Brazil&apos;,&apos;Americas&apos;, 
&apos;Bahamas&apos;,&apos;Americas&apos;, 
&apos;Belize&apos;,&apos;Americas&apos;, 
&apos;Canada&apos;,&apos;Americas&apos;, 
&apos;Chile&apos;,&apos;Americas&apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>R1_R-0599</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_ERP__c</fullName>
        <description>R1_R-0611</description>
        <formula>TEXT(  $User.ERP__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_BU__c</fullName>
        <description>R1_R-0611_values from glibal picklist BU values</description>
        <label>Requestor BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <description>R1_R-0611</description>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_BEST_Change1_Date__c</fullName>
        <description>SAP BEST Change Date</description>
        <label>SAP BEST Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_BEST_ID__c</fullName>
        <description>R1_R-0008_Field for SAP integration</description>
        <label>SAP BEST ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Best_Account_Group__c</fullName>
        <formula>CASE( RecordType.Name, 
&quot;Hierarchical Account L1&quot;,&quot;ZCH2&quot;,  
&quot;Hierarchical Account L2&quot;,&quot;ZCH1&quot;, 
&quot;Hierarchical Account L3&quot;,&quot;ZCHE&quot;, 
&quot;Hierarchical Account L4&quot;,&quot;ZCHF&quot;,
&quot;Hierarchical Account L5&quot;,&quot;ZCHG&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Best Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_DIAMOND_ID__c</fullName>
        <description>R1_R-0008_Field for SAP Integration Value</description>
        <label>SAP DIAMOND ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_NICE_ID__c</fullName>
        <description>R1-R-0008-This indicates the SAP NICE ID from the sap system on account.</description>
        <label>SAP NICE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PRD_ID__c</fullName>
        <description>R1-R-0008-This field identifies the SAP PRS ID coming from Sap system on account.</description>
        <label>SAP PRD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>R1_R-0611_for salesforce id</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_customer_ID__c</fullName>
        <description>R1_R-0003_Field to treat as external id to map Salesforce - SAP integration</description>
        <displayFormat>SFID-{000000}</displayFormat>
        <label>Salesforce customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sap_Id__c</fullName>
        <description>R1-R-0602-This field describes the sap id required for power bi.</description>
        <externalId>true</externalId>
        <label>Sap Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Level_Parent_Account__c</fullName>
        <description>R1_Account Hierarchy Requirement</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Name)),Parent.Parent.Id, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will store the 2nd level parent account name based on the record type</inlineHelpText>
        <label>2nd Level Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_SAP_NICE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R-0599_required for the SAP interface</description>
        <label>Send to SAP NICE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_SAP_PRD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R-0599_required for the SAP interface</description>
        <label>Send to SAP PRD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Number__c</fullName>
        <description>R1_R-0599</description>
        <label>Shipping Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_if_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R1_R-0611</description>
        <label>Sold-To Account (if Ship-To)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer Sold-To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Sold-To Account (if Ship-To))</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Check__c</fullName>
        <label>State Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Syncing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>R1_R-0082</description>
        <label>Stop Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_Capacity__c</fullName>
        <description>R1_0645</description>
        <label>Storage Capacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>R1_R-0082</description>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_ERP__c</fullName>
        <defaultValue>CASE( $User.ERP__c,&apos;SAP NICE&apos;,&apos;SAP NICE&apos;,
&apos;SAP PRD&apos;,&apos;SAP PRD&apos;,
&apos;SAP BEST&apos;,&apos;SAP BEST&apos;,
&apos;SAP DIAMOND&apos;,&apos;SAP DIAMOND&apos;,
&apos;&apos; )</defaultValue>
        <description>R1_R-0611</description>
        <label>Target ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP NICE</fullName>
                </value>
                <value>
                    <fullName>SAP PRD</fullName>
                </value>
                <value>
                    <fullName>SAP BEST</fullName>
                </value>
                <value>
                    <fullName>SAP DIAMOND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R0217</description>
        <label>Toller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R6_R-1006</description>
        <label>Top Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Business account</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                    <label>Supplier/Toller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UltimateParentName__c</fullName>
        <description>R6_R-1006</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Name)),Parent.Name,
&apos;&apos;)))))</formula>
        <label>Ultimate Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Formula__c</fullName>
        <description>R3_R-0920/D-0884</description>
        <formula>HYPERLINK(&apos;/&apos; + 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Id, 
&apos;&apos;))))), 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Name, 
&apos;&apos;))))))</formula>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Account_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>third_Level_Parent_Account__c</fullName>
        <description>R1_Account Hierarchy Requirement</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Name)),Parent.Parent.Parent.Id, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will store the 3rd Level parent account name based on the record type</inlineHelpText>
        <label>3rd Level Parent Account</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account</value>
        </filters>
        <label>Account List</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Competitor_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competitor</value>
        </filters>
        <label>Competitor List</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Non_Buying_Account_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Buying_Account</value>
        </filters>
        <label>Non Buying Account List</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Ship_To</fullName>
        <active>false</active>
        <label>Customer Ship-To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical_Account_L1</fullName>
        <active>false</active>
        <label>Hierarchical Account L1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical_Account_L2</fullName>
        <active>false</active>
        <label>Hierarchical Account L2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical_Account_L3</fullName>
        <active>false</active>
        <label>Hierarchical Account L3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical_Account_L4</fullName>
        <active>false</active>
        <label>Hierarchical Account L4</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchical_Account_L5</fullName>
        <active>false</active>
        <label>Hierarchical Account L5</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locator_Address</fullName>
        <active>false</active>
        <label>Locator Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Buying_Account</fullName>
        <active>true</active>
        <label>Non-Buying Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>false</active>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACC_VR04_R1_StateMandatoryforUnitedState</fullName>
        <active>true</active>
        <description>R1_R0586_ Billing State/Province is mandatory if country = &quot;United States&quot;</description>
        <errorConditionFormula>NOT($Profile.Name = &quot;Interface User&quot;)&amp;&amp; $User.Skip_Validation__c == False &amp;&amp; ISBLANK( BillingState) &amp;&amp; ISPICKVAL(BillingCountryCode,&quot;US&quot;)</errorConditionFormula>
        <errorMessage>Please indicate the State/Province before saving your account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acc_R1_Prevent_from_editing</fullName>
        <active>false</active>
        <description>R1_R-0003_prevent the user from editing all the account fields if the field &quot;Flag for Deletion&quot; is ticked</description>
        <errorConditionFormula>$User.Skip_Validation__c == False &amp;&amp; PRIORVALUE(Flag_For_Deletion__c) = True &amp;&amp; NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;Interface User&quot; ))</errorConditionFormula>
        <errorDisplayField>Flag_For_Deletion__c</errorDisplayField>
        <errorMessage>You can not edit the record data for deletion records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acc_R6_Prevent_RecordType_Change</fullName>
        <active>true</active>
        <description>R6_R-1201_Prevent user to change the account record type for Sold to and Ship to Records</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
IsChanged(RecordTypeId),
OR(
PRIORVALUE( Mkto_Account_RT_Name__c ) = &quot;Customer Sold-To&quot;,
PRIORVALUE( Mkto_Account_RT_Name__c ) = &quot;Customer Ship-To&quot;

),
OR(
RecordType.Name = &apos;Prospect&apos;,
RecordType.Name = &apos;Competitor&apos;,
RecordType.Name = &apos;Hierarchical Account L1&apos;,
RecordType.Name = &apos;Hierarchical Account L2&apos;,
RecordType.Name = &apos;Hierarchical Account L3&apos;,
RecordType.Name = &apos;Hierarchical Account L4&apos;,
RecordType.Name = &apos;Hierarchical Account L5&apos;,
RecordType.Name = &apos;Non-Buying Account&apos;,
RecordType.Name = &apos;Customer Sold-To&apos;,
RecordType.Name = &apos;Customer Ship-To&apos;

)
)</errorConditionFormula>
        <errorMessage>You can not change the Customer Sold-To or Ship-To Record Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acc_VR1_MandatoryCountry</fullName>
        <active>true</active>
        <description>It is Mandatory to fill the country field.</description>
        <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
        <errorMessage>Please enter a value for the Country field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acc_VR_R1_BillingCity_CountryMandatory</fullName>
        <active>true</active>
        <description>R1_R0586_Prevent user to save record if Billing City and Country code is blank</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False, 
NOT($Profile.Name = &quot;Interface User&quot;), 
OR( 
RecordType.Name = &quot;Prospect&quot;, 
RecordType.Name = &quot;Customer Ship-To&quot;, 
RecordType.Name = &quot;Customer Sold-To&quot; , 
RecordType.Name = &quot;Non-Buying Account&quot;
), 

ISBLANK(BillingCity), 
ISPICKVAL(BillingCountryCode , &quot;None&quot;) 

)</errorConditionFormula>
        <errorDisplayField>BillingCity</errorDisplayField>
        <errorMessage>The new Google Search functionality enhancement in Lightning does not allow for address fields to be marked as mandatory. Please enter the information in the address fields using the Google Search functionality to search the address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Acc_VR_R1_CountryValueCannotbeNone</fullName>
        <active>true</active>
        <description>R1_R-0623</description>
        <errorConditionFormula>AND( 
$User.Skip_Validation__c == False, 
NOT($Profile.Name = &quot;Interface User&quot;),
OR( 
RecordType.Name = &quot;Prospect&quot;, 
RecordType.Name = &quot;Customer Ship-To&quot;, 
RecordType.Name = &quot;Customer Sold-To&quot; , 
RecordType.Name = &quot;Non-Buying Account&quot;), 


ISPICKVAL( BillingCountryCode , &apos;NONE&apos;))</errorConditionFormula>
        <errorMessage>The new Google Search functionality enhancement in Lightning does not allow for address fields to be marked as mandatory. Please enter the information in the address fields using the Google Search functionality to search the address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R4_DL_Type_is_manadatory</fullName>
        <active>true</active>
        <description>R4-R-0945</description>
        <errorConditionFormula>AND(
Distributor_Locator_Valid__c = True,
OR(
ISPICKVAL(DL_Type__c,&apos;&apos;),
ISBLANK(Mailing_name__c),
ISBLANK(ShippingCity),
ISPICKVAL(ShippingCountryCode , &quot;None&quot;),
ISPICKVAL(ShippingStateCode , &apos;&apos;),
ISBLANK(ShippingStreet),
ISBLANK(ShippingPostalCode))
)</errorConditionFormula>
        <errorMessage>DL type, Mailing Name and Locator address are required when Distributor Location Valid is True.</errorMessage>
    </validationRules>
</CustomObject>